Moved un-used script to forms.js for future implementation. correccted layout bug in contact.html

--- a/css/main.css
+++ b/css/main.css
@@ -254,6 +254,9 @@ body {
     max-width: 350px;
 }
 
+#mapContainer {
+    padding-left: 0;
+}
 
 /************************************************************
 
